Additional syling introduced header layout issue

--- a/style.css
+++ b/style.css
@@ -4,36 +4,44 @@ body {
     justify-content: space-between;
     font-family: 'Roboto', sans-serif;
     margin: 0px;
+    align-items: center;
 }
 
 .section1 {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #1f2937;
+    width: 100%;
 }
 
-.header {
+.header,.hero {
     display: flex;
     justify-content: space-between;
     padding: 0px;
     margin: 20px;
+    max-width: 1200px;
 }
 
 h3 {
     font-size: 24px;
     color: #f9faf8;
     margin: 0px;
+    margin-right: auto;
 }
 
-.hero {
-    display: flex;  
-}
+/*.hero {
+    display: flex;
+    padding: 24px;  
+}*/
 
 .htext {
     display: flex;
     flex: 3;
     flex-direction: column;
     justify-content: center;
+    max-width: 600px;
 }
 
 h1 {
@@ -49,6 +57,16 @@ h1 {
     max-width: 400px;
     height: auto;
     margin-left: auto;
+}
+
+button {
+    background-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bold;
+    max-width: 7em;
+    padding: 6px;
+    border-radius: 6px;
+    border: 0px;
 }
 
 ul {
